# aarushi-tts-2c0018c03-e7c9-4a3b-9a4d-a2ebffa3a1c2

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: create_user_service.py  login_user_service.py  process_input_service.py  server.py  synthesize_speech_service.py  update_user_service.py
