[tool.poetry]
name = "aarushi-tts-2"
version = "0.1.0"
description = "Based on the information gathered, the project involves creating a feature or API endpoint to convert input text into natural-sounding speech audio, primarily for educational materials. Key requirements and considerations include:"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
aiosqlite = "^0.17.0"
bcrypt = "^3.2.0"
fastapi = "^0.78.0"
passlib = {version = "*", extras = ["bcrypt"]}
prisma = "*"
pydantic = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
